plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
  jcenter()      // Adicionando o repositório JCenter

}

ext {
  junitVersion = '5.9.2'
}

sourceCompatibility = '19'
targetCompatibility = '19'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}
run {
  jvmArgs = [ "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
              "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons",
              "--add-exports", "javafx.base/com.sun.javafx.event=org.controlsfx.controls"]


}

application {
  mainModule = 'com.example.nutricode_'
  mainClass = 'com.example.nutricode_.NutricodeApplication'
}

javafx {
  version = '21'
  modules = ["javafx.controls", "javafx.fxml", "javafx.graphics"]



}

dependencies {
  implementation ("mysql:mysql-connector-java:8.0.28") // Use a versão mais recente, se disponível

  // (Opcional) Logging framework
  // SLF4J API (Abstração)
  implementation "com.itextpdf:itext7-core:7.1.16"
  implementation ("org.slf4j:slf4j-api:1.7.32") // Use a versão mais recente, se disponível
  // SLF4J Simple Binding (para logging de saída simples)
  implementation ("org.slf4j:slf4j-simple:1.7.32") // Use a versão mais recente, se disponível
  implementation "de.jensd:fontawesomefx-commons:11.0"
  implementation "org.controlsfx:controlsfx:11.0.2"
  implementation ("de.jensd:fontawesomefx-fontawesome:4.7.0-11")
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
useJUnitPlatform()}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}